contrast fix

--- a/styles/base.css
+++ b/styles/base.css
@@ -26,7 +26,7 @@ nav {
 }
 
 .active {
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.6);
 }
 
 .active a {
